updated sant mat with akatha. added verse 15 to reality in 40

--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -16,6 +16,39 @@
 
 \chapter{Text}
 
+\section{15}
+
+\begin{quote}
+On the present the past and the future stand. They too are the present
+in their times. Thus the present alone exists. Ignoring the present,
+and seeking to know the past and the future, is like trying to count
+without the initial unit.
+\end{quote}
+
+The present \emph{is} always, for even the past was the present in its
+time, and so also will the future be the present in \emph{its}
+time. Whatever happens therefore happens only in the present. When
+Methuselah was born, he was born in the present, and when he died
+after 9 or 10 centuries he died also in the present, despite the later
+date. Similarly all that happened to him between those two events
+happened also in the present. Thus the present is the only significant
+tense in actuality. Moreover, let us not forget the fact that time is
+made of instants which are so minute as to have no room either for a
+past or for a future, but for the present alone. The next verse will
+tell us that even the present is unreal, being one of the notions of
+our mind, as past and future are --- acts of our memory.
+
+\index{present}
+\index{future}
+\index{past}
+
+\section{16}
+
+\begin{quote}
+
+\end{quote}
+
+
 \section{23}
 
 \begin{quote}
@@ -30,6 +63,10 @@ or in sleep or swoon - as the man who himself wakes, swoons and
 sleeps. To know the true nature of this perennial ``I'', we have to
 conduct an inquiry into its source.
 
+\index{body}
+\index{sleep}
+\index{inquiry}
+\index{I}
 
 
 \end{document}
