--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt]{report}
 \usepackage{hyperref}   % use for hypertext links, including those to external documents and URLs
+\usepackage{makeidx} 
+\makeindex
 
 \begin{document}
 
@@ -7,7 +9,10 @@
 \author{Ramana Maharishi}
 \maketitle
 
+
 \tableofcontents
+
+\chapter{Introduction}
 
 \chapter{Invocation}
 
@@ -15,6 +20,67 @@
 \section{ii}
 
 \chapter{Text}
+
+\section{5}
+
+\begin{quote}
+The body is in the form of, and includes, the 5 sheathes. Is there a
+world apart from the body? Has anyone without a body seen the world?
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+The body is a complex structure containing a large number of
+instruments or organs which the Self, as ego uses for a large number
+of purposes, including among others those of hearing, smelling,
+seeing, thinking, feeling, memorizing and reasoning. The materials out
+of which these instruments or parts are made vary from the grossest to
+the finest. The emph{Shastras} (scriptures) have arranged them in five
+groups. To each group one sheath of \emph{kosha} is assigned. The
+\emph{kosha} dealing with purely physical matter is called
+\emph{annamayakosha} (the sheat of food). The \emph{pranamayakosha}
+(the vital sheath) looks after the fivefold functions of the vital
+energies --- breathing, assimilatin, generation, excretion and
+locomotion. The \emph{manomayakosha} (mental sheath) contains the
+faculties of mentation. The \emph{vijnanamayakosha} is the sheath of
+the intellectual and reasoning faculties, of scientific and
+philosophic thinking, and last is the \emph{anandamayakosha}, the
+sheath of bliss, or causal sheath, which stores up within itslef the
+karmic seeds of every birth and is concerned with that state in which
+profound peace is enjoyed by the dreamless sleeper. This \emph{kosha}
+is made of the finest substance, \emph{sattva}, which in itself is
+happy, due to its freedom from grossness and its close proximity to
+the blissful Self.
+
+Thus the term body includes all these \emph{koshas}, whose appearance
+and disappearance cause the appearance and disappearance of all
+objective and subjective perceptions. Assumption of a body is
+therefore necessary for the world's enjoyment and the body owes its
+existence, as we shall see in the next verse, to the five senses,
+which are the properties of the mind.
+
+\section{10}
+
+\begin{quote}
+Knowledge and ignorance are interrelated: the one does not exist
+without the other. Inquiring to whom is it that knowledge and that
+ignorance, and arriving at their root cause, the Self, this is true
+knowledge. 
+\end{quote}
+
+\index{knowledge}\index{ignorance}\index{inquiry}\index{Self}
+
+To speak of ignorance is to admit its opposite --- knowledge --- and
+\emph{vice versa}. Until we become aware of an object we remain
+ignorant of its existence. To learn a lesson is to admit our previous
+ignorance of its content. Knowledge is thus the light which clears
+away the darkness of ignorance. But knowledge and ignorance which
+pertain to external objects are mere modes of thought. They come and
+go, and are therefore of no consequence in the search for Truth. What
+is of consequence is their knower, who is fixed, changeless, also
+called first principle because he is efficient, causeless, the eternal
+thinker, who precedes and survives all his thoughts --- ``the basic
+One'' (verse nine).
 
 \section{15}
 
@@ -45,8 +111,37 @@ our mind, as past and future are --- acts of our memory.
 \section{16}
 
 \begin{quote}
-
+Do time and space exist apart from us? If we are the body we are
+affected by time and space. But are we the body? We are the same now,
+then and forever.
 \end{quote}
+
+\index{time}\index{space}\index{body}
+
+Of course time and space are mere concepts in us. Because in our long
+journey in life we pass through multitudes of experiences, we have to
+conceive past, present and future in order to arrange them
+conveniently in their sequence of occurence in our memory. Because we
+perceive multiplicity, we have to conceive a space in which to
+accomodate them, like the screen on which cinematograph pictures are
+spread. Without a screen there can be no pictures. The screen on which
+the universe actually appears and moves is thus our own mind, from
+which it emanates as thoughts, either of external physical objects, or
+of internal concepts, sensations, emotions, including the senses of
+time and space. 
+
+Those who take themselves for the body take \emph{time} to be the
+creator and destroyer of all things, and thus it inspires them with
+great fear --- fear of future calamaties, of death, of loss of fortune
+and position, or whatever it may be. Many of them consult astrologers
+to read the decrees of time and foretell events long in advance of
+their occurrence. To them birth, youth, old age and death; creation,
+preservation and dissolution; past, present and future; health and
+disease, prosperity and adversity all exist without the shadow of a
+doubt: they fall prey to time and its vagaries. The others who know
+themselves to be pure spirit are bodiless, timeless and spaceless; and
+Bhagavan affirms, they are thus free from the hallucination of ``We
+alone are; time and space are not''.
 
 
 \section{23}
@@ -68,5 +163,7 @@ conduct an inquiry into its source.
 \index{inquiry}
 \index{I}
 
+\chapter{Index}
+\printindex
 
 \end{document}
