--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -24,7 +24,53 @@
 
 \section{1}
 
+\begin{quote}
+Because the world is seen, we have to infer a common (a Lord)
+possessing unlimited powers to appear as the diversity. The pictures
+consisting of names and forms, the seer, the canvas, the light ----
+all these are He Himself.
+\end{quote}
 
+\index{world}\index{Lord}\index{diversity}\index{Self}
+
+The Forty begins here. To understand Bhagavan's meaning we have to use
+the key with which he supplies us in the Invocation. There he declares
+Reality to be the thought-free Awareness which dwells in the
+heart. Here he brings in the world in order to meet on their own
+ground those disciples who do perceive a ``real'' external world. He
+is saying something like this: ``You see a world and ascribe an
+omnipotent creator to it. But as we have already seen, this creation
+is only an appearance, a manifestation of that Awareness of which we
+were speaking. It has no more reality in itself than have the pictures
+projected on a screen.'' From the heart thoughts spontaneously rise,
+like vapour from the ocean, and turn into a kaleidoscopic world of
+names, forms, colours, sounds, smells and other impressions. These are
+in it, or on it as on a canvas of which the heart is itself the seer
+and the sight.
+
+Pure Consciousness or Pure Mind is thus the pictures, the screen, the
+seer, and the light or sight.
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{2}
+
+\begin{quote}
+On three entities — the individual, God and the world — every creed is
+based. The saying the One becomes the
+three as well as ``always the three are three'', are said only while
+the ego lasts. To lose the ``I'' and abide in the Self  is the Supreme
+State. 
+\end{quote}
+
+\index{individual}\index{God}\index{world}\index{creed}\index{Self}
+\section{1}
 
 \begin{quote}
 
