new visual output

--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -62,14 +62,24 @@ seer, and the light or sight.
 \section{2}
 
 \begin{quote}
-On three entities — the individual, God and the world — every creed is
-based. The saying the One becomes the
-three as well as ``always the three are three'', are said only while
-the ego lasts. To lose the ``I'' and abide in the Self  is the Supreme
-State. 
+All schools of thought postulate the fundamental triad --- God, soul
+and world --- although all three are manifestations of the One. The
+belief that the three remain eternally lasts only as long as the ``I''
+or ego lasts. To destroy the ego and remain in one's own state is best.
 \end{quote}
 
-\index{individual}\index{God}\index{world}\index{creed}\index{Self}
+\index{God}\index\{soul}\index{world}\index{Self}
+
+Most religions are based on the assumption that the triad mentioned in
+the text is eternal. Bhagavan rejects this assumption as being the
+child of the ignorant ego which mistakes itself for the body. The
+``I-am-the-body'' notion compels the admissions of an individuality
+(jiva), a world, its creator, as three distinct, perennial,
+co-existing entities. Bhagavan, as we have seen, perceives a single
+existence of which these three are an illusory manifestation which,
+however, vanishes the moment the eternal ``I'' is apprehended and the
+ego perishes.
+
 \section{1}
 
 \begin{quote}
