--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -80,13 +80,23 @@ existence of which these three are an illusory manifestation which,
 however, vanishes the moment the eternal ``I'' is apprehended and the
 ego perishes.
 
-\section{1}
+\section{3}
 
 \begin{quote}
-
+Of what avail to debate whether the world is real or unreal, sentient
+or insentient, pleasant or unpleasant? Extingishing the ego,
+transcending the world, realising the Self --- that is the state which
+is dear to all, and free from the sense of unity and duality.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{philosophy}
+
+The same line of thought continues. Destruction of the ego is a
+\emph{sine qua non} for the realisation of the Self within the
+heart. It brings to an end all speculation about reality and
+unreality, God and world, whose true nature will be revealed in actual
+experience. This is the most blissful attainable state and beyond the
+plurality of the illusory world.
 
 
 \section{5}
