--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -51,14 +51,6 @@ and the sight.
 Pure Consciousness or Pure Mind is thus the pictures, the screen, the
 seer, and the light or sight.
 
-\section{1}
-
-\begin{quote}
-
-\end{quote}
-
-\index{body}\index{sheathes}\index{world}\index{ghost}
-
 \section{2}
 
 \begin{quote}
@@ -98,6 +90,36 @@ unreality, God and world, whose true nature will be revealed in actual
 experience. This is the most blissful attainable state and beyond the
 plurality of the illusory world.
 
+\section{4}
+
+\begin{quote}
+If the Self be with form, God and the world will be also. If one be
+formless oneself, how and by whom can their forms be seen? Can their
+be sight without eyes? The Self is the eye, the limitless Eye.
+\end{quote}
+
+\index{form}\index{formless}
+
+This refers to the \emph{jnani}, who although having a body seem
+himself as bodiless and formless, and so cannot see God, or in fact
+see anything with form. The \emph{ajnani} (the non-realised),
+perceiving himself as a body, takes God also to be a body and worships
+him in all sorts of material, formal representations. Yet the fact
+remains that even he perceives everything through his own formless
+Self, which we have granted to be the only seers, the only knowledge
+there is --- the ``limitless Eye''. Those who condemn idol-worship
+forget that they themselves worship material symbols and icons, and
+attribute to God forms, dimensions, positions, even sentiments and
+sense-perceptions exactly as they do to themselves. Having no
+experience or conception of a formless omniscient spirit, they feel
+literally lost lost at the idea of worshipping something not
+represented in a form. God, thus, appears according to the degree of
+realisation of one's Self.
+
+``Can there be sight without eyes?'' means that without consciousness
+there can be no knowledge of anything, just as without a lamp none of
+the objects present in a darm room can be seen. Can there be a world
+to an unconscious man?
 
 \section{5}
 
@@ -137,6 +159,40 @@ therefore necessary for the world's enjoyment and the body owes its
 existence, as we shall see in the next verse, to the five senses,
 which are the properties of the mind.
 
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+
+
 \section{10}
 
 \begin{quote}
@@ -159,6 +215,40 @@ is of consequence is their knower, who is fixed, changeless, also
 called first principle because he is efficient, causeless, the eternal
 thinker, who precedes and survives all his thoughts --- ``the basic
 One'' (verse nine).
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+
 
 \section{15}
 
@@ -221,6 +311,55 @@ themselves to be pure spirit are bodiless, timeless and spaceless; and
 Bhagavan affirms, they are thus free from the hallucination of ``We
 alone are; time and space are not''.
 
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+
 
 \section{23}
 
@@ -240,6 +379,144 @@ conduct an inquiry into its source.
 \index{sleep}
 \index{inquiry}
 \index{I}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+\section{1}
+
+\begin{quote}
+
+\end{quote}
+
+\index{body}\index{sheathes}\index{world}\index{ghost}
+
+
 
 \chapter{Index}
 \printindex
