--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -159,13 +159,26 @@ therefore necessary for the world's enjoyment and the body owes its
 existence, as we shall see in the next verse, to the five senses,
 which are the properties of the mind.
 
-\section{1}
+\section{6}
 
 \begin{quote}
-
+The world is but the fivefold sense-objects, which are the results of
+the five senses. Since the mind perceives the world through the
+senses, is there a world without the mind?
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{world}\index{senses}\index{mind}
+
+Through the sensory organs lodges in the five \emph{koshas}, the
+senses display before the mind a variety of objects --- physica,
+vital, emotional, mental and intellectual. Apart from the five sense
+perceptions, there all sorts of other internal senses which also arise
+from the mind, work through the mind, and are understood by the mind
+--- such as the senses of time, of space, or ``I'' and ``mine'', and
+the artistic, ethical, religious and spiritual senses for
+instance. Since all these senses form the world we known and have one 
+common origin, which is the mind, the world cannot therefore be other
+than that mind.
 
 \section{1}
 
