--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -16,13 +16,13 @@
 
 \chapter{Invocation}
 
-\section{i}
-\section{ii}
+\section*{i}
+\section*{ii}
 
 \chapter{Text}
 
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 Because the world is seen, we have to infer a common (a Lord)
@@ -51,7 +51,7 @@ and the sight.
 Pure Consciousness or Pure Mind is thus the pictures, the screen, the
 seer, and the light or sight.
 
-\section{2}
+\section*{2}
 
 \begin{quote}
 All schools of thought postulate the fundamental triad --- God, soul
@@ -60,7 +60,7 @@ belief that the three remain eternally lasts only as long as the ``I''
 or ego lasts. To destroy the ego and remain in one's own state is best.
 \end{quote}
 
-\index{God}\index\{soul}\index{world}\index{Self}
+\index{God}\index{soul}\index{world}\index{Self}
 
 Most religions are based on the assumption that the triad mentioned in
 the text is eternal. Bhagavan rejects this assumption as being the
@@ -72,7 +72,7 @@ existence of which these three are an illusory manifestation which,
 however, vanishes the moment the eternal ``I'' is apprehended and the
 ego perishes.
 
-\section{3}
+\section*{3}
 
 \begin{quote}
 Of what avail to debate whether the world is real or unreal, sentient
@@ -90,7 +90,7 @@ unreality, God and world, whose true nature will be revealed in actual
 experience. This is the most blissful attainable state and beyond the
 plurality of the illusory world.
 
-\section{4}
+\section*{4}
 
 \begin{quote}
 If the Self be with form, God and the world will be also. If one be
@@ -121,7 +121,7 @@ there can be no knowledge of anything, just as without a lamp none of
 the objects present in a darm room can be seen. Can there be a world
 to an unconscious man?
 
-\section{5}
+\section*{5}
 
 \begin{quote}
 The body is in the form of, and includes, the 5 sheathes. Is there a
@@ -159,7 +159,7 @@ therefore necessary for the world's enjoyment and the body owes its
 existence, as we shall see in the next verse, to the five senses,
 which are the properties of the mind.
 
-\section{6}
+\section*{6}
 
 \begin{quote}
 The world is but the fivefold sense-objects, which are the results of
@@ -170,7 +170,7 @@ senses, is there a world without the mind?
 \index{world}\index{senses}\index{mind}
 
 Through the sensory organs lodges in the five \emph{koshas}, the
-senses display before the mind a variety of objects --- physica,
+senses display before the mind a variety of objects --- physical,
 vital, emotional, mental and intellectual. Apart from the five sense
 perceptions, there all sorts of other internal senses which also arise
 from the mind, work through the mind, and are understood by the mind
@@ -180,7 +180,29 @@ instance. Since all these senses form the world we known and have one
 common origin, which is the mind, the world cannot therefore be other
 than that mind.
 
-\section{1}
+\section*{7}
+
+\begin{quote}
+Although the world and the awareness of it rise and set together, it
+is by awareness that the world is known. The source from which they
+both rise, and into which they both set, always shines without itself
+rising or setting. That alone is real.
+\end{quote}
+
+\index{world}\index{awareness}
+
+This verse is reminiscent of the Invocation and confirms the previous
+verse, which make awareness the criterion of existence as well as the
+source of the world. Awareness ``always shines'' as the ``limitless
+Eye'' mentioned in verse four, the eternal Knower. It goes without
+saying that the appearance of the world is simultaneous with the
+awareness of it, and disappearance of the world simultaneous with the
+withdrawal of that awareness. For the fact of the awareness of the
+world is the fact of its existence. We cannot affirm the existence of
+an object without first affirming awareness of it. Therefore awareness
+is the only Reality there is.
+
+\section*{1}
 
 \begin{quote}
 
@@ -188,15 +210,7 @@ than that mind.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
-
-\begin{quote}
-
-\end{quote}
-
-\index{body}\index{sheathes}\index{world}\index{ghost}
-
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -206,7 +220,7 @@ than that mind.
 
 
 
-\section{10}
+\section*{10}
 
 \begin{quote}
 Knowledge and ignorance are interrelated: the one does not exist
@@ -229,7 +243,7 @@ called first principle because he is efficient, causeless, the eternal
 thinker, who precedes and survives all his thoughts --- ``the basic
 One'' (verse nine).
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -237,7 +251,7 @@ One'' (verse nine).
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -245,7 +259,7 @@ One'' (verse nine).
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -253,7 +267,7 @@ One'' (verse nine).
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -263,7 +277,7 @@ One'' (verse nine).
 
 
 
-\section{15}
+\section*{15}
 
 \begin{quote}
 On the present the past and the future stand. They too are the present
@@ -289,7 +303,7 @@ our mind, as past and future are --- acts of our memory.
 \index{future}
 \index{past}
 
-\section{16}
+\section*{16}
 
 \begin{quote}
 Do time and space exist apart from us? If we are the body we are
@@ -324,7 +338,7 @@ themselves to be pure spirit are bodiless, timeless and spaceless; and
 Bhagavan affirms, they are thus free from the hallucination of ``We
 alone are; time and space are not''.
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -332,7 +346,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -340,7 +354,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -348,7 +362,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -356,7 +370,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -364,7 +378,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -374,7 +388,7 @@ alone are; time and space are not''.
 
 
 
-\section{23}
+\section*{23}
 
 \begin{quote}
 The body does not say ``I''. In sleep no one admits he is not. The
@@ -393,7 +407,7 @@ conduct an inquiry into its source.
 \index{inquiry}
 \index{I}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -401,7 +415,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -409,7 +423,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -417,7 +431,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -425,7 +439,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -433,7 +447,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -441,7 +455,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -449,7 +463,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -457,7 +471,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -465,7 +479,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -473,7 +487,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -481,7 +495,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -489,7 +503,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -497,7 +511,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -505,7 +519,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -513,7 +527,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
@@ -521,7 +535,7 @@ conduct an inquiry into its source.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section{1}
+\section*{1}
 
 \begin{quote}
 
