--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -202,13 +202,25 @@ world is the fact of its existence. We cannot affirm the existence of
 an object without first affirming awareness of it. Therefore awareness
 is the only Reality there is.
 
-\section*{1}
+\section*{8}
 
 \begin{quote}
-
+In whatever name and form the nameless and formless is worshipped,
+therein lies the path of its realisation. Realising one's truth as the
+truth of that reality, and merging into it, is true realisation.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{form}
+
+All roads lead to Rome --- all sincere worship comes from the heart,
+and leads to the formless God in the heart. To believe that one's
+reality is the same as God's is an important step towards the
+realisation of Him as Pure Consciousness and the process of merging
+into Him. How many millions of innocent human beings would have been
+spared the horror of religious persecutions throughout the centuries
+in the name of God, and how many wars would have been prevented, had
+this truth been accepted as the one truth underlying all religions,
+the basic world faith!
 
 \section*{1}
 
