--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -222,14 +222,24 @@ in the name of God, and how many wars would have been prevented, had
 this truth been accepted as the one truth underlying all religions,
 the basic world faith!
 
-\section*{1}
+\section*{9}
 
 \begin{quote}
-
+The dyads and triads rest on the basic One. Enquiring about that One
+in the mind, they will disappear. Those who see thus are the seers of
+truth: they remain unruffled.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{dyad}\index{triad}
 
+The dyads are the pairs of opposites --- knowledge and ignorance,
+light and darkness, happiness and miserty, birth and death, etc. The
+triad is triple principle of seen, seer and sight; object, subject and
+the perception of the former by the latter. As all the numbers stand
+on, and originate from, the first number, so are the dyads and triads
+based on, arising from, and ofthe same nature as the one seer, the
+perceiving mind. He who realises the world as such retains a uniform
+serenity in all conditions of life.
 
 
 \section*{10}
