--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -265,13 +265,25 @@ called first principle because he is efficient, causeless, the eternal
 thinker, who precedes and survives all his thoughts --- ``the basic
 One'' (verse nine).
 
-\section*{1}
+\section*{11}
 
 \begin{quote}
-
+Is it not ignorance to know all but the all-knowing Self? When the
+latter, the substratum of both knowledge and ignorance, is known,
+knowledge and ignorance themselves both disappear.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{knowledge}\index{ignorance}
+
+It is of course foolish to know about everything in the world, and
+remain ignorant of one's own Self. Knowledge of the perishable -- the
+universe and its contents -- perishes with the body, and cannot be
+transferred to another body, except perhaps as tendencies or abilities
+in the perishable too, which may not have any spiritual value in a
+future life. The imperishable alone endures and gives imperishable
+satisfaction, and this lies wholly within ourselves, who are the
+source and ground of both knowledge and ignorance -- that is, of all
+experiences whatever.
 
 \section*{1}
 
