--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -285,13 +285,24 @@ satisfaction, and this lies wholly within ourselves, who are the
 source and ground of both knowledge and ignorance -- that is, of all
 experiences whatever.
 
-\section*{1}
+\section*{12}
 
 \begin{quote}
-
+True knowledge is neither knowledge or ignorance. Objective knowledge
+is not true knowledge. Because the Self is self-effulgent, having no
+second to know or be known, it is Supreme Knowledge -- not empty
+nothingness.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{knowledge!objective}\index{void}
+
+This continues the theme of verses ten and eleven. We have seen tht
+objective knowledge is knowledge of the perishable, the apparent, the
+non-existent, the unreal (see Invocation). Self-awareness is true
+knowledge, because it is absolute, i.e. changeless, non-dual,
+ever-pure (thought-free). This purity is not emptiness because of the
+lack of perceivable objectives in it, but the ever-shining plenum of
+Awareness-Being (\emph{chit-Sat}).
 
 \section*{1}
 
