--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -304,13 +304,27 @@ ever-pure (thought-free). This purity is not emptiness because of the
 lack of perceivable objectives in it, but the ever-shining plenum of
 Awareness-Being (\emph{chit-Sat}).
 
-\section*{1}
+\section*{13}
 
 \begin{quote}
-
+The Self alone is knowledge, is truth. Knowledge of the diversity is
+ignorance, is false knowledge. Yet ignorance is not apart from the
+Self, which is knowledge. Are the ornaments different from the gold
+which is real?
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{diversity}
+
+So the world with all its multiplicity of shapes, colors, smells
+tastes and so forth is nothing but pure consciousness in substance,
+like variously-shaped jewelry which is nothing but gold. To perceive
+shapes, colors, smells and the like as different from one another is
+ignorance, is illusion, but to see them as the single substance out of
+which they are made -- the pure mind -- is true knowledge.
+
+``Yet ignorance is not apart from the Self'' because all experiences
+as thoughts come from the Self and are witnessed by it (verses six and
+seven). 
 
 \section*{1}
 
