--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -326,15 +326,24 @@ which they are made -- the pure mind -- is true knowledge.
 as thoughts come from the Self and are witnessed by it (verses six and
 seven). 
 
-\section*{1}
+\section*{14}
 
 \begin{quote}
+The ``I'' existing, ``you'' and ``he'' also exist. If by investigating
+the truth of the ``I'' the ``I'' ceases, ``you'' and ``he'' will also
+cease and will shine as the One. This is the natural state of one's
+being.
 
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
-
-
+``You'' and ``he'' are the world; it stands and falls with the ``I''
+or ego, which constructs it. Realising one's being is realising the
+whole world to be the same effulgent being -- ``the One''. This state
+of being is experienced by the Self-realised man in the waking state
+consciously and by all men in dreamless sleep. In dreamless sleep
+(sushupti), the ``I'', like everything else, disappears and one
+remains in one's native state -- in the true ``I'' but generally
+without retaining memory of this condition on awakening.
 
 \section*{15}
 
