--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -475,13 +475,33 @@ conduct an inquiry into its source.
 \index{inquiry}
 \index{I}
 
-\section*{1}
+\section*{24}
 
 \begin{quote}
-
+The insentient body does not say ``I.'' The ever-existennt
+consciousness is not born (thus cannot say ``I''). The ``I'' of the
+size of the body springs up between the two: it is known as
+chit-jada-granthi (the knot which ties together the sentient and
+insentient), bondage, individuality, ego, subtle body, samsara, mind,
+etc. 
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+The body, unaware of its own existence, does not say ``I''; and the
+Self which pure spirit, pure intelligence, has never come to and so,
+also, does not say ``I.'' But somehow the intelligence under the
+compelling power of \emph{avidya} (ignorance) assumes a body, comes to
+identify itself with this body and to call itself ``I,'' thus tying
+together body and soul in a knot, which is known as the knot of
+ignorance in the heart -- literally the sentience-insentience knot. It
+is an extremely hard knot which defies centuries of births, but breaks
+of its own accord when Self-realisation is achieved, and bondage and
+ignorance are destroyed forever.
+
+\emph{``Samsara''} means going round on the wheel of birth and
+death. In India, the wife is significantly also called
+\emph{samsara}. 
+
+\index{chit-jada-granthi}\index{sentient}\index{insentient}\index{body!subtle}\index{individuality}\index{bondage}\index{samsara}\index{mind}\index{knot}
 
 \section*{1}
 
