--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -503,13 +503,18 @@ death. In India, the wife is significantly also called
 
 \index{chit-jada-granthi}\index{sentient}\index{insentient}\index{body!subtle}\index{individuality}\index{bondage}\index{samsara}\index{mind}\index{knot}
 
-\section*{1}
+\section*{25}
+
 
 \begin{quote}
-
+Know that this formless ghost (the ego or ``I'') springs up in a form
+(body). Taking a form it lives, feeds and grows. Leaving a form it
+picks up another, but when it is inquired into, it drops the form and
+takes to flight.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+The ego is a vertiable ghost. A ghost is a disembodied spirit that
+takes 
 
 \section*{1}
 
