--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -547,13 +547,26 @@ that the same surrender can be achieved by the method of
 
 \index{ego}\index{inquiry}
 
-\section*{1}
+\section*{27}
 
 \begin{quote}
 
+  The non-emergence of the ``I'' is the state of being THAT. Without
+  seeking and attaining the place whence the ``I'' emerges, how is one
+  to achieve self-extinction -- the non-emergence of the ``I''?
+  Without that achievement, how is one to abide as THAT -- one's true
+  state? 
+
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{}
+
+\emph{The non-emergence of the ``I'' means egolessness, the natural
+  state of being or THAT. To stop the ego from rising we have to find
+  the place of its emergence and annihilate it there, before it
+  emerges, so that we may consciously ever abide as THAT, egoless, in
+  the heart, as we unconsciously do in sleep. The word ``place''
+  stands here for Heart.
 
 \section*{1}
 
