--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -225,7 +225,7 @@ the basic world faith!
 \section*{9}
 
 \begin{quote}
-The dyads and triads rest on the basic One. Enquiring about that One
+The dyads and triads rest on the basic One. Inquiring about that One
 in the mind, they will disappear. Those who see thus are the seers of
 truth: they remain unruffled.
 \end{quote}
@@ -568,13 +568,30 @@ that the same surrender can be achieved by the method of
   the heart, as we unconsciously do in sleep. The word ``place''
   stands here for Heart.
 
-\section*{1}
+\section*{28}
 
 \begin{quote}
-
+  Like the diver who dives to recover what has fallen into deep water,
+  controlling speech and breath and with a keen mind, one must dive
+  into himself and find whence the ``I'' emerges.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+The basic theme of many of the previous verses, it must have been
+observed, is the \emph{vichara}, through which the search for the
+ego's source has to be made. Deep diving is a metaphor that implies
+salvaging the ego from the depths of ignorance into which it has
+fallen, not amateurishly but very expertly and unremittingly, or else
+success will be sporadic and even doubtful. Bhagavan means that this
+\emph{sadhak}'s life should be dedicated to Realisation and to nothing
+else, for who knows what obstacles destiny will raise against him to
+bar his march to the highest in future lives? So he asks us to turn
+into divers right now, contrlling speech and breath. Breath-control is
+equivalent to mental silence (suspension of thoughts), whcih has to be
+practised alongside the inquiry in order to train the mind to be
+alone, \emph{kaivalya} (thought-free), when it will perceive itself in
+its natural purity, the mot previous Self, ``whence the I emerges.''
+
+\index{}
 
 \section*{1}
 
