--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -593,13 +593,29 @@ its natural purity, the mot previous Self, ``whence the I emerges.''
 
 \index{}
 
-\section*{1}
+\section*{29}
 
 \begin{quote}
-
+  Seeking the source of the ``I'' with a mind turned inwards and no
+  uttering of the word ``I'' is indeed the path of
+  knowledge. Meditation on ``I am not this, I am that'' is an aid to
+  the inquiry, but not the inquiry itself.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{inquiry}
+
+Bhagavan misses no opportunity of reminding us that the quest ``who am
+I?'' is not a formula to be repeated mechanically like an incantation,
+but an intellectual activity into the nature of the ``I'' which is
+carried out until its base is fully grasped and its source is
+reached. The whole process is dialectical, involving the exercise of
+the logical faculty, till it ends in the silence of the heart, which
+transcends all faculties. Some suggestive formula such as ``I am
+THAT'' may be used to being with, but in course of time it has to turn
+into an unshakeable conviction, side by side with the stilling of the
+mind as mentioned in the previous commentary, which gradually grows in
+depth and duration. That is why the path of the \emph{vichara} is
+known as the path of knowlege (\emph{jnana marga}).
 
 \section*{1}
 
