--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -617,13 +617,30 @@ mind as mentioned in the previous commentary, which gradually grows in
 depth and duration. That is why the path of the \emph{vichara} is
 known as the path of knowlege (\emph{jnana marga}).
 
-\section*{1}
+\section*{30}
 
 \begin{quote}
-
+  Inquiring ``Who am I?'' within the mind, and reaching the heart, the
+  ``I'' collapses. Instantly, the real ``I'' appears (as ``I'' ``I''),
+  which although it manifests itself as ``I'' is not the ego, but the
+  true being.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{heart}
+
+What happens to the ``I'' which has found its own source and
+collapsed? The meaning is that the ``I'' which has not been aware of
+its own reality has now, through inquiry, come face to face with it,
+and has turned from the notion of being a mortal body to the
+realisation of being the shining sea of consciousness. This is the
+'collapse' of the false ``I'' giving place to the true ``I'', which is
+eternally present as ``I'', ``I'', ``I'' without end or beginning. We
+must not forget that there is only one, secondless ``I'', whether we
+view it as ego, totally sunk in the pleasures of the world and in
+ignorance, or as Self, the substratum and source of the world.
+
+``Inquring within the mind who am I?'' is an affirmation once again,
+that the quest has to be carried out with the mind.
 
 \section*{1}
 
