--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -642,13 +642,28 @@ ignorance, or as Self, the substratum and source of the world.
 ``Inquring within the mind who am I?'' is an affirmation once again,
 that the quest has to be carried out with the mind.
 
-\section*{1}
+\section*{31}
 
 \begin{quote}
-
+  What remains to be done by him, who, having extinguished the go,
+  remains immersed in the bliss of the Self? He is aware of nothing
+  but the Self. Who can understand his state?
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{aware}\index{Self}
+
+The purpose of all human endeavors, conscious or unconscious, is the
+gaining of happiness. The unwise seeks it outside himself in wealth,
+matrimony, high political and social positions, fame, worldy
+achievements and pleasure of all sorts. The wise knows that the
+happiness that comes from an outside cause is illusory due to its
+precarious nature and its inability even temporarily to confer
+contentment without trouble, fear, and endless anxiety. Lasting,
+undiluted happiness is one's very nature, and thus within the grasp of
+anyone who earnestly seeks it. One who has gained this inner beatitude
+has no further actions to do, nor purpose to achieve. All his
+aspirations having been fulfilled, his sole preoccupation remains that
+ocean of bliss, which passes the understanding of the common man.
 
 \section*{1}
 
