--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -645,7 +645,7 @@ that the quest has to be carried out with the mind.
 \section*{31}
 
 \begin{quote}
-  What remains to be done by him, who, having extinguished the go,
+  What remains to be done by him, who, having extinguished the ego,
   remains immersed in the bliss of the Self? He is aware of nothing
   but the Self. Who can understand his state?
 \end{quote}
@@ -665,15 +665,27 @@ has no further actions to do, nor purpose to achieve. All his
 aspirations having been fulfilled, his sole preoccupation remains that
 ocean of bliss, which passes the understanding of the common man.
 
-\section*{1}
+\section*{32}
 
 \begin{quote}
-
+  Despite the Vedas proclaiming ``Thou art THAT'', it is sheer
+  weak-mindedness not to investigate into the nature of oneself and
+  abide as the Self, but instead to go on thinking ``THAT I am, not
+  this.'' 
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{vedas}
 
-\section*{1}
+The main point of this verse is that when the Vedas tell us that we
+are THAT, we are in duty bound to conduct an inquiry into ourselves in
+order to experience \emph{the truth of it} and abide at THAT or the
+Self, rather than just mechanically thinking that we are not the body
+but THAT. Investigation and meditation will eventually rise above the
+body-thought, and will reach the \emph{tanumanai} state (the rarified
+mind) through which the pure awareness can be directly
+apprehended. This is the silent heart itself.
+
+\section*{}
 
 \begin{quote}
 
