--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -685,13 +685,34 @@ body-thought, and will reach the \emph{tanumanai} state (the rarified
 mind) through which the pure awareness can be directly
 apprehended. This is the silent heart itself.
 
-\section*{}
+\section*{33}
 
 \begin{quote}
-
+  It is ludicrous to thik ``I know myself'', or ``I do not know
+  myself'', admitting thereby two selves, one the object of the
+  other. That the Self is only one is the experience of all.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{self-knowledge}
+
+To know a thing is to create a duality -- the knower and the
+known. But in self-knowledge there can be no duality, the known being
+the knower himself, the object and the subject being one and the same
+identify.
+
+It is common experience that the ``I'' is unqualified and single: it
+is neither divisible into parts nor tainted by qualities. However fat
+or lean, old or young, learned or ignorant, rich or poor, whole or
+dismembered one may be, one is aware of oneself only as ``I'' devoid
+of any attributes. The bare ``I'', ``I'', ``I'' is the primary
+cognition of everyone, preceding the ``mine'' cognition, the body and
+all its appertenances, and all its thoughts. This shows that the Self
+is non-dual, homogeneous and indivisble, and can abide pure by itself
+with no thoughts to disturb it, being itself not a thought, but the
+intuitive recognition of oneself as the eternal knower, the pivot --
+more correctly, the substance -- of all one knows. It is evident that
+the ``I'' being pure indivisible consciousness, is experienced by the
+\emph{jnani} as the same in all.
 
 \section*{1}
 
