--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -714,13 +714,24 @@ more correctly, the substance -- of all one knows. It is evident that
 the ``I'' being pure indivisible consciousness, is experienced by the
 \emph{jnani} as the same in all.
 
-\section*{1}
+\section*{34}
 
 \begin{quote}
-
+  Without trying to realise in the heart that reality which is the
+  true nature of all, and without trying to abide in it, to engage in
+  disputations as to ther the reality exists or not, or is real or
+  not, denotes delusion born of ignorance.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{philosophy}
+
+The theme of the previous verse continues. The realization of one's
+Self is the realization of the true nature of all else, the Self being
+single and homogeneous. Disputations deepen the ignorance and not
+infrequently lead to acrimony, anger, hatred, and jealousy among the
+disputants, not to speak of the vanity and arrogance they create in
+the hearts of the winners. They should thus be shunned by seekers of
+Truth and of Peace everlasting.
 
 \section*{1}
 
@@ -774,5 +785,17 @@ the ``I'' being pure indivisible consciousness, is experienced by the
 
 \chapter{Index}
 \printindex
+
+\chapter{Postscript}
+
+I, Terrence Monroe Brannon, decided that there needed to be a freely
+available version of the one book which summarizes Advaita Vedanta. I
+first learned of this text in my dealings with the guru Arunachala
+Ramana and his spiritual institute AHAM.com
+
+I took the liberty of changing British English to American English.
+
+Feedback/corrections are welcome: TheQuietCenter\@gmail.com
+http://www.LivingCosmos.org
 
 \end{document}
